// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons CheckCircleIcon should match snapshot 1`] = `
<svg
  className="feather feather-check-circle"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
  />
  <polyline
    points="22 4 12 14.01 9 11.01"
  />
</svg>
`;

exports[`icons CircleIcon should match snapshot 1`] = `
<svg
  className="feather feather-circle"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="10"
  />
</svg>
`;

exports[`icons CornerUpLeftIcon should match snapshot 1`] = `
<svg
  className="feather feather-corner-up-left"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="9 14 4 9 9 4"
  />
  <path
    d="M20 20v-7a4 4 0 0 0-4-4H4"
  />
</svg>
`;

exports[`icons EditIcon should match snapshot 1`] = `
<svg
  className="feather feather-edit"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M20 14.66V20a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h5.34"
  />
  <polygon
    points="18 2 22 6 12 16 8 16 8 12 18 2"
  />
</svg>
`;

exports[`icons MinusCircleIcon should match snapshot 1`] = `
<svg
  className="feather feather-minus-circle"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="10"
  />
  <line
    x1="8"
    x2="16"
    y1="12"
    y2="12"
  />
</svg>
`;

exports[`icons PlusCircleIcon should match snapshot 1`] = `
<svg
  className="feather feather-plus-circle"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="10"
  />
  <line
    x1="12"
    x2="12"
    y1="8"
    y2="16"
  />
  <line
    x1="8"
    x2="16"
    y1="12"
    y2="12"
  />
</svg>
`;

exports[`icons TargetIcon should match snapshot 1`] = `
<svg
  className="feather feather-target"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    cx="12"
    cy="12"
    r="10"
  />
  <circle
    cx="12"
    cy="12"
    r="6"
  />
  <circle
    cx="12"
    cy="12"
    r="2"
  />
</svg>
`;

exports[`icons TrashIcon should match snapshot 1`] = `
<svg
  className="feather feather-trash"
  fill="none"
  height="24"
  stroke="currentColor"
  strokeLinecap="round"
  strokeLinejoin="round"
  strokeWidth="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <polyline
    points="3 6 5 6 21 6"
  />
  <path
    d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
  />
</svg>
`;
